--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -8,5 +8,5 @@
     URL
     <input type="text" name="url">
   </label>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Create Bookmark">
 </form>
