--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -5,6 +5,7 @@
     <li>
       Title: <%= link.title.capitalize %>
       URL:   <%= link.url   %>
+      Tags:  <%=  %>
     </li>
   <% end %>
 </ul>
