--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -8,5 +8,9 @@
     URL
     <input type="text" name="url">
   </label>
+  <label for="tag">
+    Tags
+    <input type="text" name="tag">
+  </label>
     <input type="submit" value="Create Bookmark">
 </form>
