--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -4,8 +4,8 @@
   <% @links.each do |link| %>
     <li>
       Title: <%= link.title.capitalize %>
-      URL:   <%= link.url   %>
-      Tags:  <%=  %>
+      URL:   <%= link.url %>
+      Tags:  <%= link.tags.map(&:name).join %>
     </li>
   <% end %>
 </ul>
