--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -5,7 +5,7 @@
     <li>
       Title: <%= link.title.capitalize %>
       URL:   <%= link.url %>
-      Tags:  <%= link.tags.map(&:name).join %>
+      Tags:  <%= link.tags.map(&:name).join(' ') %>
     </li>
   <% end %>
 </ul>
